--- a/final-project/style.css
+++ b/final-project/style.css
@@ -1,7 +1,8 @@
 
 h1{
 	text-align: center;
-	font-size: bold;
+	font-weight: bold;
+font-style: italic;
 	color: white;
 }
 
@@ -15,7 +16,7 @@ h1{
 body{
 	background-image: url(../final-project/darkbackround.jpg.jpg);
 	background-size: cover;
-	font-family: 'Patrick Hand', cursive;
+	font-family: 'Prociono', serif;
 	color: ghostwhite;
 
 
