--- a/final-project/style.css
+++ b/final-project/style.css
@@ -13,11 +13,17 @@ font-style: italic;
   width: 50%;
 }
 
+div{
+	text-align: center;
+}
+
 body{
 	background-image: url(../final-project/darkbackround.jpg.jpg);
 	background-size: cover;
 	font-family: 'Prociono', serif;
 	color: ghostwhite;
+
+
 
 
 
